# Z80-Wireframe-Renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  old.txt  todo.txt
helper/: generate_lut.py
precompiled/: os_with_romdisk.img
shapes/: cube.c  dual-cube.c  pyramid.c
src/: math-stuff.c  math-stuff.h  wireframe.c  zvb_dma.c  zvb_dma.h
